# rustyburp

./: Cargo.toml  README.md
rustyclient/: client.html  connection.html  controller.html
src/: main.rs  old-main.rs
test/: basic-ws.py  nc-serve.sh
